--- a/QuickKart-BusinessLayer/QuickKart-BusinessLayer.csproj
+++ b/QuickKart-BusinessLayer/QuickKart-BusinessLayer.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
